# NARATIV-NETWORK

./: .gitignore  INSTALL.command  README.md  START.command  pyproject.toml
docs/: LOCAL_TEST.md  architecture.md
narativ_network/: __init__.py  cli.py  config.example.toml  config.py
narativ_network/admin/: server.py
narativ_network/admin/web/static/: app.css  app.js
narativ_network/cue_runner/: __init__.py  runner.py
narativ_network/db/: __init__.py  connection.py  schema.sql
narativ_network/db/migrations/: 0001_live_shows.sql  0002_transcripts.sql  0003_audio_preset.sql
narativ_network/ingest/: __init__.py  gdrive.py  local.py  poller.py  source.py
narativ_network/obs/: __init__.py  client.py  controller.py
narativ_network/playout/: __init__.py  pusher.py
narativ_network/process/: __init__.py  ad_breaks.py  audio.py  ffmpeg.py  pipeline.py
narativ_network/schedule/: __init__.py  playlist.py  resolver.py
narativ_network/transcripts/: __init__.py  search.py  whisper.py  worker.py
narativ_network/upstream/: __init__.py  daily_build.py  monitor.py  orchestrator.py  uploader.py
narativ_network/watchdog/: __init__.py  monitor.py
ops/launchd/: README.md  org.narativ.nn.admin.plist.template  org.narativ.nn.cue-runner.plist.template  org.narativ.nn.ingest.plist.template  org.narativ.nn.playout.plist.template  org.narativ.nn.schedule.plist.template  org.narativ.nn.transcribe.plist.template  org.narativ.nn.watchdog.plist.template
ops/nginx-rtmp/: nginx.conf
ops/obs/: SETUP.md
ops/scripts/: install_launchd.sh  uninstall_launchd.sh
(+6 files in other folders)
